new render with plots path fixed

--- a/data/DAY3/Output/Report.EWAS.cohort1.NeverVScurrent_student.html
+++ b/data/DAY3/Output/Report.EWAS.cohort1.NeverVScurrent_student.html
@@ -840,28 +840,28 @@ and “p[beta]” the p-value obtained using beta regression.</p>
 ##  [66] generics_0.1.3            devtools_2.4.5            tools_4.2.1               foreign_0.8-84            munsell_0.5.0            
 ##  [71] tweenr_2.0.2              fgsea_1.22.0              DelayedArray_0.22.0       fastmap_1.1.0             compiler_4.2.1           
 ##  [76] pkgload_1.3.2             httpuv_1.6.6              rtracklayer_1.56.1        sessioninfo_1.2.2         beanplot_1.3.1           
-##  [81] GenomeInfoDbData_1.2.8    edgeR_3.38.4              lattice_0.20-45           utf8_1.2.2                later_1.3.0              
-##  [86] BiocFileCache_2.4.0       jsonlite_1.8.3            scales_1.2.1              graph_1.74.0              tidytree_0.4.2           
-##  [91] sparseMatrixStats_1.8.0   lazyeval_0.2.2            promises_1.2.0.1          R.utils_2.12.2            checkmate_2.2.0          
-##  [96] rmarkdown_2.23            nor1mix_1.3-0             webshot_0.5.5             siggenes_1.70.0           dichromat_2.0-0.1        
-## [101] downloader_0.4            BSgenome_1.64.0           HDF5Array_1.24.2          yaml_2.3.5                systemfonts_1.0.4        
-## [106] htmltools_0.5.5           memoise_2.0.1             VariantAnnotation_1.42.1  profvis_0.3.7             BiocIO_1.6.0             
-## [111] graphlayouts_1.0.0        viridisLite_0.4.2         digest_0.6.29             mime_0.12                 rappdirs_0.3.3           
-## [116] RSQLite_2.2.17            yulab.utils_0.0.6         remotes_2.4.2             urlchecker_1.0.1          blob_1.2.4               
-## [121] R.oo_1.25.0               labeling_0.4.2            splines_4.2.1             Formula_1.2-5             Rhdf5lib_1.18.2          
-## [126] ProtGenerics_1.28.0       RCurl_1.98-1.7            broom_1.0.5               hms_1.1.3                 modelr_0.1.11            
-## [131] rhdf5_2.40.0              colorspace_2.0-3          base64enc_0.1-3           aplot_0.1.10              nnet_7.3-19              
-## [136] sass_0.4.6                Rcpp_1.0.9                mclust_6.0.0              fansi_1.0.3               tzdb_0.3.0               
-## [141] R6_2.5.1                  grid_4.2.1                lifecycle_1.0.3           curl_4.3.2                minqa_1.2.4              
-## [146] jquerylib_0.1.4           DO.db_2.9                 RColorBrewer_1.1-3        htmlwidgets_1.6.2         bamsignals_1.28.0        
-## [151] polyclip_1.10-4           shadowtext_0.1.2          gridGraphics_0.5-1        reactome.db_1.81.0        rvest_1.0.3              
-## [156] openssl_2.0.3             patchwork_1.1.2           htmlTable_2.4.1           codetools_0.2-19          lubridate_1.8.0          
-## [161] GO.db_3.15.0              prettyunits_1.1.1         dbplyr_2.3.2              R.methodsS3_1.8.2         gtable_0.3.3             
-## [166] DBI_1.1.3                 highr_0.10                ggfun_0.1.1               httr_1.4.6                stringi_1.7.6            
-## [171] progress_1.2.2            farver_2.1.1              viridis_0.6.3             annotate_1.74.0           ggtree_3.4.4             
-## [176] xml2_1.3.3                bezier_1.1.2              boot_1.3-28.1             restfulr_0.0.15           ggplotify_0.1.0          
-## [181] CompQuadForm_1.4.3        bit_4.0.4                 scatterpie_0.2.1          ggraph_2.1.0              pkgconfig_2.0.3          
-## [186] downlit_0.4.3
+##  [81] GenomeInfoDbData_1.2.8    edgeR_3.38.4              ggnewscale_0.4.9          lattice_0.20-45           utf8_1.2.2               
+##  [86] later_1.3.0               BiocFileCache_2.4.0       jsonlite_1.8.3            scales_1.2.1              graph_1.74.0             
+##  [91] tidytree_0.4.2            sparseMatrixStats_1.8.0   lazyeval_0.2.2            promises_1.2.0.1          R.utils_2.12.2           
+##  [96] checkmate_2.2.0           rmarkdown_2.23            nor1mix_1.3-0             webshot_0.5.5             siggenes_1.70.0          
+## [101] dichromat_2.0-0.1         downloader_0.4            BSgenome_1.64.0           HDF5Array_1.24.2          yaml_2.3.5               
+## [106] systemfonts_1.0.4         htmltools_0.5.5           memoise_2.0.1             VariantAnnotation_1.42.1  profvis_0.3.7            
+## [111] BiocIO_1.6.0              graphlayouts_1.0.0        viridisLite_0.4.2         digest_0.6.29             commonmark_1.9.0         
+## [116] mime_0.12                 rappdirs_0.3.3            RSQLite_2.2.17            yulab.utils_0.0.6         remotes_2.4.2            
+## [121] urlchecker_1.0.1          blob_1.2.4                R.oo_1.25.0               labeling_0.4.2            splines_4.2.1            
+## [126] Formula_1.2-5             Rhdf5lib_1.18.2           ProtGenerics_1.28.0       RCurl_1.98-1.7            broom_1.0.5              
+## [131] hms_1.1.3                 modelr_0.1.11             rhdf5_2.40.0              colorspace_2.0-3          base64enc_0.1-3          
+## [136] aplot_0.1.10              nnet_7.3-19               sass_0.4.6                Rcpp_1.0.9                mclust_6.0.0             
+## [141] fansi_1.0.3               tzdb_0.3.0                R6_2.5.1                  grid_4.2.1                lifecycle_1.0.3          
+## [146] curl_4.3.2                minqa_1.2.4               jquerylib_0.1.4           DO.db_2.9                 RColorBrewer_1.1-3       
+## [151] htmlwidgets_1.6.2         bamsignals_1.28.0         polyclip_1.10-4           shadowtext_0.1.2          gridGraphics_0.5-1       
+## [156] reactome.db_1.81.0        rvest_1.0.3               openssl_2.0.3             patchwork_1.1.2           htmlTable_2.4.1          
+## [161] codetools_0.2-19          lubridate_1.8.0           GO.db_3.15.0              prettyunits_1.1.1         dbplyr_2.3.2             
+## [166] R.methodsS3_1.8.2         gtable_0.3.3              DBI_1.1.3                 highr_0.10                ggfun_0.1.1              
+## [171] httr_1.4.6                stringi_1.7.6             progress_1.2.2            farver_2.1.1              viridis_0.6.3            
+## [176] annotate_1.74.0           ggtree_3.4.4              xml2_1.3.3                bezier_1.1.2              boot_1.3-28.1            
+## [181] restfulr_0.0.15           ggplotify_0.1.0           CompQuadForm_1.4.3        bit_4.0.4                 scatterpie_0.2.1         
+## [186] ggraph_2.1.0              pkgconfig_2.0.3           downlit_0.4.3
 </code></pre>
 </div>
 <div class="include-after">
